1.74.0/libs/outcome/test/compile-fail/CVS/Entries.Extra
/issue0071-fail.cpp////*////
/outcome-int-int-1.cpp////*////
/result-int-int-1.cpp////*////
/result-int-int-2.cpp////*////
